updated to add python 3.10

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,7 @@
 FROM ubuntu
 
 RUN apt-get update -y
+RUN apt-get install python3.10 -y
 RUN apt-get install python3-pip -y
 RUN python3 -m pip install flask
 RUN python3 -m pip install virtualenv
