--- a/deployment/container/api-load-balancer.yaml
+++ b/deployment/container/api-load-balancer.yaml
@@ -1,21 +1,31 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    app.kubernetes.io/name: api-load-balancer
   name: liatrio-api
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
-      app.kubernetes.io/name: api-load-balancer
+      app: liatrio-api
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: api-load-balancer
+        app: liatrio-api
     spec:
       containers:
-      - image: woejood/liatrio-api:1.0.0
-        name: liatrio-api
+      - name: liatrio-api
+        image: woejood/liatrio-api:1.0.0
+        #imagePullPolicy: Always
         ports:
         - containerPort: 5000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: liatrio-api-service
+spec:
+  type: LoadBalancer
+  ports:
+  - port: 5000
+  selector:
+    app: liatrio-api
